[package]
name = "amfi_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]

syn = {version = "2.0.22", features = ["full", "fold"]}
quote = "1.0.29"
proc-macro2 = "1.0.63"
enum-map-derive = "0.12.0"